--- a/threejs-miniproject/package.json
+++ b/threejs-miniproject/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "threejs-miniproject",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^2.9.5"
-  },
-  "dependencies": {
-    "three": "^0.139.2"
-  }
+	"name": "threejs-miniproject",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"vite": "^2.9.5"
+	},
+	"dependencies": {
+		"three": "^0.139.2"
+	},
+	"homepage": "."
 }
